Bug#22080   "CHECK fails to identify some corruption"   change to allow it to detect more errors in data format